[tool.poetry]
name = "mockturtle_wrapper"
version = "0.1.0"
description = "Tools and utilities for boolean circuit manipulations."
authors = ["Vsevolod Vaskin <vaskin.2003@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "ninja",
    "cmake>=3.12",
]
build-backend = "setuptools.build_meta"

